# document_vault_ingestion_engine

./: .gitignore  BUILD.md  README.md  RELEASE.md  evidence.md  main.py  main.spec  pyproject.toml  requirements-dev.txt  requirements.txt
ai/: __init__.py  hosted.py  providers.py
backup/: __init__.py  cloud_boundary.py  core.py
core/: __init__.py  manual_app.py  native_workflow.py
documentation/: 00-system-overview.md  01-architecture-e2e.md  02-defects-and-remedies.md  03-local-storage-vault.md  04-document-intake-validation.md  05-text-extraction-ocr.md  06-matter-document-versioning.md  07-search-indexing.md  08-licensing-security.md  09-backup-restore-cloud.md  10-ui-threading-workflows.md  11-packaging-distribution.md  12-error-handling-reporting.md  13-implementation-plan.md  14-three-products-rag-strategy.md  15-end-to-end-verification.md  16-end-to-end-testing-guide.md  17-windows-distribution-release-checklist.md  18-installer-code-signing-publishing.md  19-automatic-update-channel.md  20-manual-windows-app-e2e-handover.md  21-admin-license-payment-boundary.md  22-managed-cloud-backup-boundary.md  23-wakili-mkononi-integration-boundary.md  24-hosted-ai-llm-boundary.md  25-hosted-ai-ui-workflow.md  25-jurisnuru-firm-management.md  25-jurisnuru-gap-analysis.md  25-wakilios-firm-management.md  25-wakilios-gap-analysis.md  FINDINGS-SUMMARY.md  README.md  STATUS.md
evidence/: e2e_evidence_redesign.json  e2e_interactive_ui_evidence.json
hooks/: README.md
intake/: __init__.py  core.py  docling_runtime.py  extraction.py  ocr_runtime.py
licensing/: admin.py  (+6 more)
(+112 files in other folders)
