[project]
name = "document-vault-ingestion-engine"
version = "0.1.0"
description = "Local-first Windows legal document vault and ingestion engine"
requires-python = ">=3.11,<3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
