[project]
name = "document-vault-ingestion-engine"
version = "0.1.0"
description = "Local-first Windows legal document vault and ingestion engine"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "cryptography>=42",
    "pydantic>=2",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "PySide6>=6.6",
    "pyinstaller>=6.5",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]